# AlphaSynth

./: .coverage  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  loader.py  main.py  pyproject.toml  requirements.txt  setup_data.py  vector.py
.github/workflows/: ci.yml
scripts/: loader.py  setup_data.py
src/agent/: market_agent.py  news_agent.py  research_agent.py  risk_agent.py  synthesize_agent.py
src/data/: ReasearchData.csv
src/financial_analysis/analysis/: research.py  risk.py
src/financial_analysis/api/: main.py  models.py
src/financial_analysis/rag/: loader.py  vector_store.py
tests/: test_market_agent.py  test_news_agent.py  test_research_agent.py  test_risk_agent.py  test_synth_agent.py
